implementação do JS

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <input type="number" name="numero" id="inputNumero" min="0">
         </label>
         <br>
-        <button>Mostrar tabuada</button>
-        <textarea name="" id="campoTabuada" cols="30" rows="10"></textarea>
+        <button id="mostra">Mostrar tabuada</button>
+        <textarea name="" id="campoTabuada" cols="30" rows="11"></textarea>
     </section>
 
     <footer>
         <p>&#174; Clariosmachine</p>
     </footer>
-    
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
